python-web-server/tests/requests/invalid/prefix_06.py
from web_server.config import MessageConfig
from web_server.http.errors import InvalidHTTPVersion

cfg = MessageConfig.default()
request = InvalidHTTPVersion
